<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30sp"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/light_red"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_winner"
        android:layout_width="200sp"
        android:layout_height="200sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:src="@drawable/winner"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_winner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        tools:text="@string/wishes"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/light_red"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_congratulations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        tools:text="@string/username"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/light_red"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        tools:text="You got 9 out of 10"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/light_red"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25sp"
        android:text="@string/btn_finish"
        android:layout_marginHorizontal="40sp"
        app:cornerRadius="25sp"
        android:backgroundTint="@color/light_purple"/>




</androidx.constraintlayout.widget.ConstraintLayout>