<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="180sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:layout_margin="16sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_nameString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                android:layout_margin="16sp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20sp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@id/tv_nameString">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_start"
                android:layout_margin="20sp"
                android:backgroundTint="@color/sky_blue"
                app:cornerRadius="10dp"
                android:layout_marginBottom="40sp"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40dp"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>